Fix T59722: stencil texture overlay not working on macOS.